syntax = "proto3";
package atlante;

import "grids/grid.proto";

message Job {
  string sheet_name = 1;
  atlante.grids.Grid grid = 2;
  map<string, string> meta_data = 3;
}
